parser/src/snapshots/rustpython_parser__context__tests__assign_subscript.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 16,
            },
        ),
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 4,
                            },
                        ),
                        custom: (),
                        node: Subscript(
                            ExprSubscript {
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 0,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 1,
                                        },
                                    ),
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                slice: Located {
                                    location: Location {
                                        row: 1,
                                        column: 2,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 3,
                                        },
                                    ),
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Located {
                    location: Location {
                        row: 1,
                        column: 7,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 16,
                        },
                    ),
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 8,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 9,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 11,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 12,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 14,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 15,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
