parser/src/snapshots/rustpython_parser__context__tests__assign_with.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..17,
        custom: (),
        node: With(
            StmtWith {
                items: [
                    Withitem {
                        context_expr: Located {
                            range: 5..6,
                            custom: (),
                            node: Constant(
                                ExprConstant {
                                    value: Int(
                                        1,
                                    ),
                                    kind: None,
                                },
                            ),
                        },
                        optional_vars: Some(
                            Located {
                                range: 10..11,
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                            },
                        ),
                    },
                ],
                body: [
                    Located {
                        range: 13..17,
                        custom: (),
                        node: Pass,
                    },
                ],
                type_comment: None,
            },
        ),
    },
]
