parser/src/snapshots/rustpython_parser__context__tests__aug_assign_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..16,
        custom: (),
        node: AugAssign(
            StmtAugAssign {
                target: Attributed {
                    range: 0..3,
                    custom: (),
                    node: Attribute(
                        ExprAttribute {
                            value: Attributed {
                                range: 0..1,
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: Identifier(
                                            "x",
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            },
                            attr: Identifier(
                                "y",
                            ),
                            ctx: Store,
                        },
                    ),
                },
                op: Add,
                value: Attributed {
                    range: 7..16,
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    range: 8..9,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 11..12,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 14..15,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
            },
        ),
    },
]
