parser/src/snapshots/rustpython_parser__context__tests__aug_assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..6,
        custom: (),
        node: AugAssign(
            StmtAugAssign {
                target: Located {
                    range: 0..1,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "x",
                            ctx: Store,
                        },
                    ),
                },
                op: Add,
                value: Located {
                    range: 5..6,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
