parser/src/snapshots/rustpython_parser__context__tests__del_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 7,
            },
        ),
        custom: (),
        node: Delete(
            StmtDelete {
                targets: [
                    Located {
                        location: Location {
                            row: 1,
                            column: 4,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 7,
                            },
                        ),
                        custom: (),
                        node: Attribute(
                            ExprAttribute {
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 4,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 5,
                                        },
                                    ),
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                attr: "y",
                                ctx: Del,
                            },
                        ),
                    },
                ],
            },
        ),
    },
]
