parser/src/snapshots/rustpython_parser__context__tests__del_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..5,
        custom: (),
        node: Delete(
            StmtDelete {
                targets: [
                    Attributed {
                        range: 4..5,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Del,
                            },
                        ),
                    },
                ],
            },
        ),
    },
]
