parser/src/snapshots/rustpython_parser__context__tests__del_subscript.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..8,
        custom: (),
        node: Delete(
            StmtDelete {
                targets: [
                    Attributed {
                        range: 4..8,
                        custom: (),
                        node: Subscript(
                            ExprSubscript {
                                value: Attributed {
                                    range: 4..5,
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                slice: Attributed {
                                    range: 6..7,
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                ctx: Del,
                            },
                        ),
                    },
                ],
            },
        ),
    },
]
